force-app/main/default/objects/SFDC_Target_Company_Contact__c/SFDC_Target_Company_Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts at target companies.</description>
    <label>Target Company Contact</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Company Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>