force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the Target Contact</description>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
</CustomField>