force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile phone number for Target Contact.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>