force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number for Target Contact.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>