force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address of Target Contact.</description>
    <label>Street</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>