force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <description>Target companies can have multiple target contacts.</description>
    <label>Target Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Target_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>