force-app/main/default/objects/SFDC_Target_Company_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Target Contact.</description>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>